--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,7 @@ wp-content/*
 !wp-content/themes
 
 wp-content/plugins/*
-#!wp-content/plugins/fivetwofive-work-post-type
-#!wp-content/plugins/fivetwofive-cta
-#!wp-content/plugins/fivetwofive-lp-post-type
-#!wp-content/plugins/fivetwofive-resource-post-type
-#!wp-content/plugins/fivetwofive-events-post-type
+!wp-content/plugins/fivetwofive-blocks
 
 wp-content/themes/*
 !wp-content/themes/fivetwofive
